--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,12 @@
 {
     "compilerOptions": {
-        "outDir": "dist",
         "target": "es5",
         "module": "commonjs",
         "declaration": true,
+        "outDir": "dist",
+        "strict": true,
+        //"allowSyntheticDefaultImports": true,
+        //"esModuleInterop": true,
     },
     "include": [
         "./src/**/*"
