--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "tsc",
     "test": "./node_modules/.bin/mocha -r ts-node/register -s 30000 -t 30000 src/test/test_*.ts",
-    "coverage": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- -s 30000 -t 30000 dist/test/test_*.js"
+    "coverage": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- -s 30000 -t 30000 dist/test/test_*.js",
+    "lint": "./node_modules/.bin/eslint dist/*.js"
   },
   "author": "Lars Gregori <github@larsgregori.de>",
   "license": "Apache-2.0",
@@ -42,6 +43,7 @@
     "@types/mocha": "^5.2.5",
     "@types/request": "^2.47.1",
     "chai": "^4.1.2",
+    "eslint": "^5.6.0",
     "istanbul": "^0.4.5",
     "mocha": "^5.2.0",
     "ts-node": "^7.0.1",
