--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "test": "./node_modules/.bin/mocha -r ts-node/register -s 30000 -t 30000 src/test/test_*.ts",
-    "coverage": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- -s 30000 -t 30000 dist/test/test_*.js",
+    "coverage": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha --report lcovonly -- -s 30000 -t 30000 dist/test/test_*.js && cat ./coverage/lcov.info | ./node_modules/.bin/coveralls && rm -rf ./coverage",
     "lint": "./node_modules/.bin/eslint dist/*.js"
   },
   "author": "Lars Gregori <github@larsgregori.de>",
@@ -43,9 +43,11 @@
     "@types/mocha": "^5.2.5",
     "@types/request": "^2.47.1",
     "chai": "^4.1.2",
+    "coveralls": "^3.0.2",
     "eslint": "^5.6.0",
     "istanbul": "^0.4.5",
     "mocha": "^5.2.0",
+    "mocha-lcov-reporter": "^1.3.0",
     "ts-node": "^7.0.1",
     "typescript": "^3.0.3"
   }
