--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "target": "es5",
+        "target": "es2015",
         "module": "commonjs",
         "declaration": true,
         "outDir": "dist",
@@ -10,6 +10,6 @@
         "./src/**/*"
     ],
     "exclude": [
-        "./build"
+        "./dist"
     ]
 }
