--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
   },
   "files": [
     "dist/",
-    "README.md",
-    "LICENSE"
+    "README.md"
   ],
   "keywords": [
     "sap leonardo",
@@ -47,6 +46,7 @@
     "istanbul": "^0.4.5",
     "mocha": "^5.2.0",
     "ts-node": "^7.0.1",
+    "tslint": "^5.11.0",
     "typescript": "^3.1.1"
   }
 }
