--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "./node_modules/.bin/tsc",
     "test": "npm run build && ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha --report lcovonly -- -s 30000 -t 30000 dist/test/test_*.js && cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
-    "lint": "npm run build && ./node_modules/.bin/eslint dist/*.js"
+    "lint": "./node_modules/.bin/tslint src/**/*.ts && ./node_modules/.bin/eslint examples/*.js"
   },
   "author": "Lars Gregori <github@larsgregori.de>",
   "license": "Apache-2.0",
@@ -37,12 +37,12 @@
     "request": "^2.88.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.1.5",
+    "@types/chai": "^4.1.6",
     "@types/mocha": "^5.2.5",
     "@types/request": "^2.47.1",
     "chai": "^4.2.0",
     "coveralls": "^3.0.2",
-    "eslint": "^5.6.0",
+    "eslint": "^5.6.1",
     "istanbul": "^0.4.5",
     "mocha": "^5.2.0",
     "ts-node": "^7.0.1",
