add async examples (ocr, which_shoe)

--- a/examples/.eslintrc.yml
+++ b/examples/.eslintrc.yml
@@ -2,7 +2,7 @@ env:
   node: true
 extends: 'eslint:recommended'
 parserOptions:
-  ecmaVersion: 6
+  ecmaVersion: 2017  #async/await
 rules:
   accessor-pairs: error
   array-bracket-newline: error
