--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "NPM module for SAP Leonardo Machine Learning Foundation - Functional Services https://api.sap.com/package/SAPLeonardoMLFunctionalServices",
   "main": "dist/index.js",
   "scripts": {
-    "build": "./node_modules/.bin/tsc",
+    "build": "./node_modules/.bin/tsc --sourceMap",
     "build-test": "./node_modules/.bin/tsc --build test/tsconfig.json",
     "build-all": "npm run build && npm run build-test",
     "test": "npm run build-all && ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha --report lcovonly -- -s 10000 -t 10000 dist/test/test_*.js && cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
     "coverage": "npm run build-all && ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha --report html -- -s 10000 -t 10000 dist/test/test_*.js",
-    "lint": "./node_modules/.bin/tslint src/*.ts && ./node_modules/.bin/tslint test/*.ts && ./node_modules/.bin/eslint examples/*.js"
+    "lint": "./node_modules/.bin/tslint src/*.ts && ./node_modules/.bin/tslint test/*.ts && ./node_modules/.bin/eslint examples/*.js",
+    "prepack": "rm -r dist; ./node_modules/.bin/tsc"
   },
   "author": "Lars Gregori <github@larsgregori.de>",
   "license": "Apache-2.0",
@@ -50,7 +51,7 @@
     "@types/request": "^2.47.1",
     "chai": "^4.2.0",
     "coveralls": "^3.0.2",
-    "eslint": "^5.7.0",
+    "eslint": "^5.8.0",
     "istanbul": "^1.1.0-alpha.1",
     "mocha": "^5.2.0",
     "ts-node": "^7.0.1",
