--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
         "declaration": true,
         "outDir": "dist",
         "strict": true,
-        "sourceMap": true,
+        "sourceMap": false,
     },
     "include": [
         "./src/**/*"
