--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "coveralls": "^3.0.2",
     "eslint": "^5.8.0",
     "istanbul": "^1.1.0-alpha.1",
+    "log4js": "^3.0.6",
     "mocha": "^5.2.0",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
