--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "test": "npm run build-all && npx istanbul cover _mocha --report lcovonly -- -s 30000 -t 30000 dist/test/test_*.js && cat ./coverage/lcov.info | npx coveralls",
     "coverage": "npm run build-all && npx istanbul cover _mocha --report html -- -s 30000 -t 30000 dist/test/test_*.js",
     "lint": "npx tslint src/*.ts && npx tslint test/*.ts && npx eslint examples/*.js",
-    "prepack": "rm -r dist; npx tsc"
+    "prepack": "rm -r dist; npx tsc",
+    "roboter": "npx roboter analyse",
+    "mocha-with-ts": "npx mocha -s 10000 -t 10000 test/*.ts --require ts-node/register"
   },
   "author": "Lars Gregori <github@larsgregori.de>",
   "license": "Apache-2.0",
